--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3'
-
 networks:
   backend:
     name: Backend
@@ -12,25 +10,23 @@ services:
     restart: always
     volumes:
       - ./minio_data:/data
-    expose:
-      - 9000
-      - 9001
     ports:
-      - 9000:9000
-      - 9001:9001
+      - 127.0.0.1:9000:9000
+      - 127.0.0.1:9001:9001
     command: server /data --address ":9000" --console-address ":9001"
     networks:
       - backend
+    environment:
+      - MINIO_ROOT_USER=minioadmin
+      - MINIO_ROOT_PASSWORD=minioadmin
 
   mongodb-server:
     image: mongo:latest
     restart: always
     volumes:
       - ./mongo_data:/data/db
-    expose:
-      - 27017
     ports:
-      - 27017:27017
+      - 127.0.0.1:27017:27017
     networks:
       - backend
 
@@ -39,10 +35,8 @@ services:
     restart: always
     volumes:
       - ./redis_data:/data
-    expose:
-      - 6379
     ports:
-      - 6379:6379
+      - 127.0.0.1:6379:6379
     networks:
       - backend
 
@@ -52,17 +46,17 @@ services:
       context: ./
       dockerfile: ./Dockerfile-Api
     healthcheck:
-      test: curl -f http://localhost || exit 1
+      test: curl -f http://127.0.0.1 || exit 1
       interval: 10s
       timeout: 5s
       retries: 3
     restart: always
-    expose:
-      - 80
-      - 2096
+    volumes:
+      - ./builds:/opt/API/builds
+      - ./configs/config.json:/opt/API/config.json
     ports:
-      - 80:80
-      - 2096:2096
+      - 0.0.0.0:80:80
+      - 0.0.0.0:2096:2096
     depends_on:
       - minio-server
       - mongodb-server
@@ -77,12 +71,11 @@ services:
       context: ./
       dockerfile: ./Dockerfile-Server
     restart: always
-    expose:
-      - 5000-5010/tcp
-      - 5000-5010/udp
+    volumes:
+      - ./configs/serverconfig.cfg:/opt/serverconfig.cfg
     ports:
-      - 5000-5010:5000-5010/tcp
-      - 5000-5010:5000-5010/udp
+      - 0.0.0.0:5000-5010:5000-5010/tcp
+      - 0.0.0.0:5000-5010:5000-5010/udp
     depends_on:
       hypernex-api:
         condition: service_healthy
